crates/typecheck/tests/fixtures/errors/break_type_mismatch.ax
fn main() { val x: Int = loop { break true } }
